packages/aiforge-engine/aiforge_engine-0.0.12.tar.gz/aiforge_engine-0.0.12/src/aiforge_deploy/kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aiforge
  labels:
    name: aiforge
